[gd_scene load_steps=32 format=3 uid="uid://e7a8jwpxqmt7"]

[ext_resource type="Script" uid="uid://c12lvnoeuv4j7" path="res://modules/entities/enemies/shades/school_boss/school_boss_hands.gd" id="1_wjpl6"]
[ext_resource type="Script" uid="uid://dr6vxgun7rg7n" path="res://addons/xsm/state.gd" id="2_um5sj"]
[ext_resource type="Material" uid="uid://bisbatw7pxu6r" path="res://assets/debug/pixel_perfect_styling/smooth-pixel.tres" id="4_fgc8y"]
[ext_resource type="Texture2D" uid="uid://cskdnbk5smr03" path="res://modules/entities/enemies/shades/Hand_attack.png" id="4_um5sj"]
[ext_resource type="Script" uid="uid://utnt85iruerh" path="res://modules/entities/enemies/shades/school_boss/hand_xsm/idle.gd" id="4_y2awv"]
[ext_resource type="Script" uid="uid://brbvcsnbw6r0s" path="res://modules/entities/enemies/shades/school_boss/hand_xsm/charge_slam.gd" id="5_lytyo"]
[ext_resource type="PackedScene" uid="uid://6tybdjnr6y0c" path="res://modules/entities/enemies/soft_collisions/soft_collision.tscn" id="5_x7dah"]
[ext_resource type="Script" uid="uid://sgbgpy8s08d3" path="res://addons/xsm/state_animation.gd" id="6_fgae4"]
[ext_resource type="Script" uid="uid://d05n4ujsgot0f" path="res://modules/entities/enemies/shades/school_boss/hand_xsm/stunned.gd" id="6_fhnrg"]
[ext_resource type="Script" uid="uid://dc7k3kwq0lbts" path="res://addons/basecomponents/Components/2D/hitbox_component_2d.gd" id="6_lytyo"]
[ext_resource type="Script" uid="uid://xwm5n6gui458" path="res://modules/entities/enemies/shades/school_boss/hand_xsm/slam.gd" id="6_y2awv"]
[ext_resource type="Script" uid="uid://dbew7r2to85ao" path="res://modules/entities/enemies/shades/school_boss/hand_xsm/dead.gd" id="7_fhnrg"]
[ext_resource type="Script" uid="uid://b1svtud75bya4" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="7_y2awv"]
[ext_resource type="Script" uid="uid://ct6vby56i820l" path="res://addons/basecomponents/Components/health_component.gd" id="8_fhnrg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wjpl6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y2awv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7dah"]
size = Vector2(20.25, 20.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgae4"]
size = Vector2(20, 36)

[sub_resource type="Animation" id="Animation_qxuus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26.5, 4.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xkthc"]
resource_name = "attack_down"
length = 1.15
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 15)]
}

[sub_resource type="Animation" id="Animation_edfvw"]
resource_name = "attack_left"
length = 1.15
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(70, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-33, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.497991, 1.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wjpl6"]
resource_name = "attack_right"
length = 1.15
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26.5, 4.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7yowg"]
resource_name = "attack_up"
length = 1.15
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BehaviorComponents/AttackBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 15)]
}

[sub_resource type="Animation" id="Animation_bto24"]
resource_name = "charge_down"
step = 0.125

[sub_resource type="Animation" id="Animation_fgae4"]
resource_name = "charge_left"
step = 0.125

[sub_resource type="Animation" id="Animation_fhnrg"]
resource_name = "charge_right"
step = 0.125

[sub_resource type="Animation" id="Animation_2p0nf"]
resource_name = "charge_up"
step = 0.125

[sub_resource type="Animation" id="Animation_x7dah"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_x4jft"]
resource_name = "idle_right"
length = 1.1
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74, 15)]
}

[sub_resource type="Animation" id="Animation_gf2va"]
resource_name = "idle_left"
length = 1.1
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DisplayComponents/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DisplayComponents/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(70, 15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_no8kc"]
_data = {
&"RESET": SubResource("Animation_qxuus"),
&"attack_down": SubResource("Animation_xkthc"),
&"attack_left": SubResource("Animation_edfvw"),
&"attack_right": SubResource("Animation_wjpl6"),
&"attack_up": SubResource("Animation_7yowg"),
&"charge_down": SubResource("Animation_bto24"),
&"charge_left": SubResource("Animation_fgae4"),
&"charge_right": SubResource("Animation_fhnrg"),
&"charge_up": SubResource("Animation_2p0nf"),
&"death": SubResource("Animation_x7dah"),
&"idle_left": SubResource("Animation_gf2va"),
&"idle_right": SubResource("Animation_x4jft")
}

[node name="SchoolBossHands" type="CharacterBody2D" groups=["enemy", "saved_data", "tetherable_body"]]
z_index = 1
y_sort_enabled = true
collision_layer = 1032
collision_mask = 83
script = ExtResource("1_wjpl6")

[node name="HandFSM" type="Node" parent="."]
script = ExtResource("2_um5sj")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Alive/Movement/Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Alive" type="Node" parent="HandFSM"]
script = ExtResource("2_um5sj")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Movement/Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Movement" type="Node" parent="HandFSM/Alive"]
script = ExtResource("2_um5sj")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Idle" type="Node" parent="HandFSM/Alive/Movement"]
script = ExtResource("4_y2awv")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "idle_right"
loop_mode = 2
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="Combat" type="Node" parent="HandFSM/Alive"]
script = ExtResource("2_um5sj")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="ChargeSlam" type="Node" parent="HandFSM/Alive/Combat"]
script = ExtResource("5_lytyo")
charge_time = 1.0
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Movement/Idle")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="Slam" type="Node" parent="HandFSM/Alive/Combat"]
script = ExtResource("6_y2awv")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Movement/Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="AttackUp" type="Node" parent="HandFSM/Alive/Combat/Slam"]
script = ExtResource("6_fgae4")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "attack_up"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../../Movement/Idle")
metadata/_custom_type_script = "uid://sgbgpy8s08d3"

[node name="AttackRight" type="Node" parent="HandFSM/Alive/Combat/Slam"]
script = ExtResource("6_fgae4")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "attack_right"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../../Movement/Idle")
metadata/_custom_type_script = "uid://sgbgpy8s08d3"

[node name="AttackDown" type="Node" parent="HandFSM/Alive/Combat/Slam"]
script = ExtResource("6_fgae4")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "attack_down"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../../Movement/Idle")
metadata/_custom_type_script = "uid://sgbgpy8s08d3"

[node name="AttackLeft" type="Node" parent="HandFSM/Alive/Combat/Slam"]
script = ExtResource("6_fgae4")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "attack_left"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../../Movement/Idle")
metadata/_custom_type_script = "uid://sgbgpy8s08d3"

[node name="Reaction" type="Node" parent="HandFSM/Alive"]
script = ExtResource("2_um5sj")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Stunned" type="Node" parent="HandFSM/Alive/Reaction"]
script = ExtResource("6_fhnrg")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "idle"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = true
waiting_time = 3.0
on_timer_finished = 3
next_state = NodePath("../../Movement/Idle")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="Dead" type="Node" parent="HandFSM"]
script = ExtResource("7_fhnrg")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_wjpl6")

[node name="TetherableArea" type="Area2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(2, 2)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherableArea"]
shape = SubResource("CircleShape2D_y2awv")

[node name="BehaviorComponents" type="Node2D" parent="."]

[node name="SoftCollision" parent="BehaviorComponents" instance=ExtResource("5_x7dah")]

[node name="AttackBox" type="Area2D" parent="BehaviorComponents"]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 4
script = ExtResource("6_lytyo")
damage = 2
metadata/_custom_type_script = "uid://dc7k3kwq0lbts"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehaviorComponents/AttackBox"]
position = Vector2(26.5, 4.5)
shape = SubResource("RectangleShape2D_x7dah")
disabled = true
debug_color = Color(0.662615, 0.284915, 1, 0.42)

[node name="HurtBox" type="Area2D" parent="BehaviorComponents" node_paths=PackedStringArray("health_component")]
collision_layer = 8
collision_mask = 4
script = ExtResource("7_y2awv")
health_component = NodePath("../Health")
metadata/_custom_type_script = "uid://b1svtud75bya4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehaviorComponents/HurtBox"]
position = Vector2(-2, -12)
shape = SubResource("RectangleShape2D_fgae4")

[node name="Health" type="Node" parent="BehaviorComponents"]
script = ExtResource("8_fhnrg")
max_health = 30
metadata/_custom_type_script = "uid://ct6vby56i820l"

[node name="DisplayComponents" type="Node2D" parent="."]
material = ExtResource("4_fgc8y")

[node name="Sprite2D" type="Sprite2D" parent="DisplayComponents"]
use_parent_material = true
position = Vector2(-74, 15)
rotation = 6.28319
texture = ExtResource("4_um5sj")
flip_h = true
hframes = 13
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_no8kc")
}

[connection signal="mouse_entered" from="TetherableArea" to="." method="_on_tetherable_area_mouse_entered"]
[connection signal="mouse_exited" from="TetherableArea" to="." method="_on_tetherable_area_mouse_exited"]
[connection signal="Hit" from="BehaviorComponents/HurtBox" to="." method="_on_hurt_box_hit"]
[connection signal="Died" from="BehaviorComponents/Health" to="." method="_on_health_died"]
